rewritten down to feature pres.

--- a/main.tex
+++ b/main.tex
@@ -79,65 +79,68 @@ What comes out of the model is first of all probabilities of conflict deaths in 
 
 % BAYSESIAN CORRECTION ER VIGTIGT!
 
-The model constructed i remarkable reliable in out-of-sample prediction with an AUC (ROC) of XX. Even more impressive is the fact that i captures all most all events, with a recall of XXXX with a threshold of 0.5. Unfortunately, when faced with the unbalanced nature of the real world the model do generate relatively many false positives as underscored with a precision at XXXX and an average precision (precision recall curve) of XXXX. Never-the-less the model does reach a accuracy of XXXX. Or presented in a less tecnical jargon: If I catagories all predictions with a score of 0.5 and above as predicted conflicts then given all the conflicts - pertaining to some given year - my model will on average correctly classify XXXXX\%(recall) of the conflicts wich will occour the following year. However these events only make op XXXX\% of events classified by the models as conflicts. Thus, I do predict a more dangerous world then we actuaalt live in. Never-the-less the model is over all correct in its assesment XXXXX\% (accuracy) of the time.\par
+The model constructed i remarkable reliable in out-of-sample prediction with an AUC (ROC) of XX. Even more impressive is the fact that i captures all most all events, with a recall of XXXX with a threshold of 0.5. Unfortunately, when faced with the unbalanced nature of the real world the model do generate relatively many false positives as underscored with a precision at XXXX and an average precision (precision recall curve) of XXXX. Never-the-less the model does reach a accuracy of XXXX; and that is while still capturing most of the rare events. Presented in a less tecnical jargon: If I catagories all predictions with a proberbility of conflict of 0.5 or above as predicted conflicts then given all the conflicts - pertaining to some given year - my model will on average correctly classify XXXXX\%(recall) of the conflicts wich will occour the following year. However these events only make op XXXX\% of events classified by the models as conflicts. Thus, I do predict a more dangerous world then we actual do live in. Still while the number of false positives is rather high compared to true positives it is rather low compared to the total number of observations and thus model is over all correct in its assesment XXXXX\% (accuracy) of the time.\par
 
-The Features credited with most of the prediction power are generally features pertaining the the temporal and spatial movement of conflict; that is how far is a cell from the nearest conflict; How many conflicts have the cell previose seen; How many fatalities where 'this' year reported in the country which the cell belongs to ect.. Next comes features pertaining to the population size of the cell and the size of the country wich the cell belongs to. Then grievance based features such as whether the cell is economically deprived relative the the country is whether cell is inhabited by politically excluded ethnic groups. Lastly come features pertaining to greed and resources such as absolute economic capacity and the presence of oil.\par
+The Features credited with most of the prediction power are generally features pertaining directly to the temporal and spatial dimensions of conflict; that is how far is a cell from the nearest conflict; How many conflicts have the cell previose seen; How many fatalities where 'this' year reported in the country which the cell belongs to ect.. This is followed by features pertaining to the population size of the cell and the size of the country wich the cell belongs to. Then grievance based features enters; such as whether the cell is economically deprived relative to the country as a whole and whether the cell is inhabited by politically excluded ethnic groups. Lastly come features pertaining to greed and resources such as absolute economic capacity and the presence of oil.\par
 
 Going forward with future endeavours I recommend allocating resources to create a more unified and systematic framework modeling the temporal-spatial evolution of conflicts.
 
+\todo[inline]{Somthing more...}
+
+The to following sections will first present the motivation and then the research question and design. This is followed by a introduction to the data sources and a presentation of the included features. Next I present the predictive framework and a thorough analysis of the derived results. This is proceeded by a discussion regarding future challenges and suggestions for improvements. Lastly a conclusion sums up the main findings.\par
+
 \subsection{The 'Why'}
-%Why multi level model? why not ANN? becouse now you use xgboost. Why bother with the features? Why bother with the theory?:
-% Why disaggregated? (ref: introduction to special issue) Why multi-level? (ref. gellman, mc eldrith)
 
 \begin{displayquote}
 \emph{[...] the estate of Man can never be without some incommodity or other; and [...] the greatest, that in any form of Government can possibly happen to the people in generall, is scarce sensible, in respect of the miseries, and horrible calamities, that accompany a Civill Warre;} \cite[128]{Hobbes_1991}  \par
 
 \end{displayquote}
 
-As the staging Hobbes-quote illustrates, civil war and internal conflicts are no novel phenomenon, nor are the efforts to understand it. Presumably intra-state conflicts have been around as long as there have been states to exercise conflict within - and the last centuary has been no exception. Since the conclusion of the Second World War intra-state conflicts have been far more common then inter-state wars \citep[563]{Collier_Hoeffler_2004}; Over five times as many people have died in intra-state conflicts compared to inter-state wars \citep[563]{Collier_Hoeffler_2004}; and since 1960 over one half of all nations have experienced some sort of violent internal conflict leading to fatalities \citep[3-4]{Blattman_Miguel_2010}.\par
+The perrils and misseries of civil war and internal conflict have plague mankind all throughout history. Presumably intra-state conflicts have been around as long as there have been states to exercise conflict within - and the last century has been no exception. Since the conclusion of the Second World War intra-state conflicts have been far more common then inter-state wars \citep[563]{Collier_Hoeffler_2004}; Over five times as many people have died in intra-state conflicts compared to inter-state wars \citep[563]{Collier_Hoeffler_2004}; and since 1960 over one half of all nations have experienced some sort of violent internal conflict leading to fatalities \citep[3-4]{Blattman_Miguel_2010}.\par
 
-Importently, internal conflicts should not be dismissed as internal affairs of little concern to other then the inflicted host and its next of kin. Examples of spillover effects facilitating the spread of conflicts across boarders a ample. At country level, having a country located in a conflict ridden neighbourhood have been shown to be a robust predictor of internal conflict \citep{Hegre_Sambanis_2006,Goldstone_2010}.\par
+Importantly, internal conflicts should not be viewed as internal affairs of little concern to other then the inflicted host and its allied. Examples of spillover effects facilitating the spread of conflicts across boarders a ample. At country level, having a country located in a conflict ridden neighbourhood have been shown to be a robust predictor of internal conflict \citep{Hegre_Sambanis_2006,Goldstone_2010}. Internal conflict is thus a highly destructive and potentially contentious malaise only to be ignored by the most imprudent or hostile observers. Understanding how internal conflicts originates and spreads in order to prevent or mitigate the destruction is indeed as crucial as ever.\par
 
-Internal conflict is thus a highly destructive and potentially contentious malaise only to be ignored by the most imprudent or hostile observers. Understanding internal conflicts in order to prevent or mitigate the destruction is indeed as crucial as ever.\par
+Encouragingly, developments in statistical techniques, data availability and computational power makes the endeavour slightly more feasible with each passing year \footnote{Unless, of course, conflict is inherently shrouded in ontological uncertainty rather the epidemiological uncertainty as implied by \cite{Gartzke_1999}}. One resent development is the shift in focus from cross country comparison towards disaggregated analyzes on sub-country unites. Given the nature - and indeed definition - of intra-state conflicts, this development is a promising step towards a better understanding the phenomenon \citep{Cederman_Gleditsch_2009}. The disaggregated approach is further enhanced by evermore accessible geospatial software and powerful new machine learning algorithms. As I will show these developments can aid us in predict future conflict zone as well as generate novel insight into the processes which cultivates and facilitates internal conflicts.\par
 
-Encouragingly, developments in statistical techniques, data availability and computational power makes the endeavour slightly more feasible with each passing year \footnote{Unless, of course, conflict is inherently shrouded in ontological uncertainty rather the epidemiological uncertainty as implied by \cite{Gartzke_1999}}. One resent development is the shift in focus from cross country comparison towards disaggregated analyzes on sub-country unites. Given the nature - and indeed definition - of intra-state conflicts, this development is a promising step towards a better understanding the phenomenon \citep{Cederman_Gleditsch_2009}. 
+% This leads us to the point of departure for the present endeavour. The project at hand explores a roster of modern tools and data to assess their potential regarding prediction of intra-state conflicts (as defined by UCDP) at the sub national level (Prio Grid level). More specifically I utilize a number of selected features, derived primarily from the Prio Grid database \citep{Tollefsen_2012} and the UCDP data base \citep{UCDP_2017}. I incorporate these into a Bayesian multi-level logit regression aimed at predicting the presence of fatal intra-stat conflicts $\in \{0,1\}$.\par
 
-This leads us to the point of departure for the present endeavour. The project at hand explores a roster of modern tools and data to assess their potential regarding prediction of intra-state conflicts (as defined by UCDP) at the sub national level (Prio Grid level). More specifically I utilize a number of selected features, derived primarily from the Prio Grid database \citep{Tollefsen_2012} and the UCDP data base \citep{UCDP_2017}. I incorporate these into a Bayesian multi-level logit regression aimed at predicting the presence of fatal intra-stat conflicts $\in \{0,1\}$.\par
+% %what extent it is possible to predict intra-state conflicts (as defined by UCDP) at the sub national level (Prio Grid level). To this end I utilize a number of selected features, derived from the Prio Grid database, and a Bayesian hierarchical multi-level logit regression.\par
 
-%what extent it is possible to predict intra-state conflicts (as defined by UCDP) at the sub national level (Prio Grid level). To this end I utilize a number of selected features, derived from the Prio Grid database, and a Bayesian hierarchical multi-level logit regression.\par
+% As such the project is preliminary in nature and only explores the fertility of a limited number of methods and features. Thus, while the approach taken here will be evaluated on account of its predictive capabilities, the central mission is to identify paths to be taken and problems to be solved in future endeavours - not generating the highest possible prediction power in itself. As a result, the data, features and model specifications are chosen on account of three criteria: first the setup needs to match and the probabilistic nature of the problem at hand. Second the setup needs to facilitate the incorporation of numerous theoretical and empirical insights, which the related litterateur offers. Third, for the sake of evaluation and future improvement and innovations, the setup needs to allow for somewhat meaningful interpretations of the individual model-specifications and features.\par
 
-As such the project is preliminary in nature and only explores the fertility of a limited number of methods and features. Thus, while the approach taken here will be evaluated on account of its predictive capabilities, the central mission is to identify paths to be taken and problems to be solved in future endeavours - not generating the highest possible prediction power in itself. As a result, the data, features and model specifications are chosen on account of three criteria: first the setup needs to match and the probabilistic nature of the problem at hand. Second the setup needs to facilitate the incorporation of numerous theoretical and empirical insights, which the related litterateur offers. Third, for the sake of evaluation and future improvement and innovations, the setup needs to allow for somewhat meaningful interpretations of the individual model-specifications and features.\par
+% To accommodate these criteria I use a Bayesian Multilevel framework which is well suited of the nested structure of the problem \cite[XXX]{Gelman_2006}. I strive to incorporate only theoretical relevant and correctly specified features. I utilize a only limited number features and refrain from using sophisticated dimensionality reduction methods and "blackbox" machine/deep-learning techniques - not as a critique of these tools, but to ease extraction of relevant insights and inspiration regarding future improvement. Indeed incorporation of these techniques might well be the part of said 'future improvement'.
 
-To accommodate these criteria I use a Bayesian Multilevel framework which is well suited of the nested structure of the problem \cite[XXX]{Gelman_2006}. I strive to incorporate only theoretical relevant and correctly specified features. I utilize a only limited number features and refrain from using sophisticated dimensionality reduction methods and "blackbox" machine/deep-learning techniques - not as a critique of these tools, but to ease extraction of relevant insights and inspiration regarding future improvement. Indeed incorporation of these techniques might well be the part of said 'future improvement'.
+% This endeavour, then, finds itself somewhere in between the two statistical traditions of estimation and prediction. Credible predictions are needless to say the crux of the matter, but the construction of a model generating credible prediction - not least in the longer run - demand theoretically sound gears and innards. Or, to formulate it in slightly more provocative terms; If we were ever to know the true and exact data generating process, a credible simulation - and derived predictions - would be trivial and a simply question of data acquisition\footnote{Which, unfortunately, is seldom a trivial endeavour.}.\par %Epistimologisk vs ontologisk uvidenhed.
 
-This endeavour, then, finds itself somewhere in between the two statistical traditions of estimation and prediction. Credible predictions are needless to say the crux of the matter, but the construction of a model generating credible prediction - not least in the longer run - demand theoretically sound gears and innards. Or, to formulate it in slightly more provocative terms; If we were ever to know the true and exact data generating process, a credible simulation - and derived predictions - would be trivial and a simply question of data acquisition\footnote{Which, unfortunately, is seldom a trivial endeavour.}.\par %Epistimologisk vs ontologisk uvidenhed.
-
-A final disclaimer is thus in order; though I will try to incorporate proposed causal ties into the model, the project at hand neither aims nor claims to 'prove' causality through clever econometric or cunning research-designs\footnote{A more in-depth discussion regarding predictions and causality will be presented in [SECTION XXXX]}. I will only explicate the theoretically proposed causal mechanism and strive to make the model and features correspond to these mechanisms in order to archive credible results. Constructing the model on theoretical sound features also serves as a first cautionary step against over-fitting the model to the noisy nature of our world.\par
+% A final disclaimer is thus in order; though I will try to incorporate proposed causal ties into the model, the project at hand neither aims nor claims to 'prove' causality through clever econometric or cunning research-designs\footnote{A more in-depth discussion regarding predictions and causality will be presented in [SECTION XXXX]}. I will only explicate the theoretically proposed causal mechanism and strive to make the model and features correspond to these mechanisms in order to archive credible results. Constructing the model on theoretical sound features also serves as a first cautionary step against over-fitting the model to the noisy nature of our world.\par
 
 
 \subsection{The 'How'}
 
-The overarching - and arguably over-ambitious - research question being posed here, can be formulated as such:\par
+The project at hand can be summed up by two research questions:\par
 
-\textbf{$\textrm{Research question}_{grand}$:} To what extent is it possible to predict the geographic location of future intra-state conflicts. \par
+\textbf{$\textrm{First research question} (Q_{1})$:} To what extent is it possible to predict the geographic location of future intra-state conflicts using a modern computational approach. \par
+\textbf{$\textrm{Second research question} (Q_{2})$:} What phenomenons and feature presents themselves as the most important in this predictions effort, and what can be done to create an even more informative feature space in the future.\par
 
-Needless to say the phrase "To what extent [...]" implies the caveat: " - Given the humble scope of the project and the limited computational resources at my disposal". Thus A less appetizing yet more appropriate formulation, mirroring the preliminary and exploratory nature of the endeavour, is:\par
+To answer these questions I use data obtained from the Upssala Conflict Data Program (UCDP) \citep{Sundberg_2013, Croicu_Sundberg_2017}. This data includes counts of conflict deaths along with both coordinates of the scene and estimated time of the event. The coordinates a linked up to specific geographical cells of $0.5\time0.5$ decimal degrees derived from the PRIO grid database \citep{Tollefsen_2012}. I aggregate the conflict data to sum up the yearly number of conflict deaths in a given cell. This measure i further dichotomized such that it only indicates wheter or not a given cell experienced conflict deaths or not. I then 'lead' the measure, effectively lagging all explanatory features to come. Or put another way I shifts the target feature one year behind such that e.g. the explanatory features of 2006 will try to predict conflicts in 2007.\par
 
-\textbf{$\textrm{Research question}_{humble}$:} To what extent can the methods and features presented and utilized below, contribute towards predicting geographic location of future intra-state conflicts. \par
+To create the explanatory features I borrow from both the conflict data itself and from the large number of features available from the PRIO grid database. To mitigate overfitting, secure robustness and aid in the quest of new insights I constrain myself to create features which corresponds to theoretical salient phenomenons described in the larger literature on civil wars and internal conflicts. Due to limitation in the data available from the PRIO grid database the date only covers 1990 through 2010\todo{Synes altså meningen var 2015??}.\par
 
-Though the 'grand research question' will function as a lodestar, the 'humble research question' will be our practical guide on the ground. As such, the following sections will first introduce the data sources and how the various features pertain to the literature: From here, I specify the selection process which aims to choose the best subset of predictors among the full set of different features and specifications. With this subset I move on to the model construction specification followed by a presentation of the results. Lastly - as appropriately given the exploratory nature of the project - I discuss how the model in future projects can be improved, both regarding features and the specific estimation technique.\par
+With target and predictors in place, I construct a predictive framework via a number of ensamples of xgboost algorithms. I use an ensample of xgboost algorithms to generate a more robust results and to facilitated insights into the uncertainty inherent in the prediction effort. All years after 2005 are used as out-of-sample test-set and thus the model is only train on data from the year 2005 and those preceding. Among the frameworks I construct is both i model including all observations and one including only new "cell-onsets".\par
 
-\todo[inline]{Bliver udbybet og accompangeret af resultater når jeg kommer lidt længere.}
+\todo[inline]{And then you analyse the shit out of those results. more to come}
 
+Needless to say the phrase "To what extent [...]" present in $Q_1$ implies the caveat: " - Given the scope of the project and the limited computational resources at my disposal. As this is preliminary research I will spend more time evaluating the results and discussing how to improve future frameworks then I will training and fine tuning the model and optimizing hyper parameters.\par 
 
+The next section will serve as a more complete introduction to the data source breifly presented above.\par
 
 \section{The Data Sources} % -------------------------------------------------------------------------
 
-\todo[inline]{Noget meta text}
+The project at hand utilize two different data source. The he Upssala Conflict Data Program (UCDP) \citep{Sundberg_2013, Croicu_Sundberg_2017} and the PRIO grid\citep{Tollefsen_2012}. The first subsection below presents the UCDP and the next the PRIO grid database.\par
 
 \subsection{The conflict data}
 
-Most central to the endeavour at hand lies - of course - the data regarding intra-state conflict itself. This data is obtained through the Upssala Conflict Data Program (UCDP) \citep{Sundberg_2013, Croicu_Sundberg_2017}. Specifically I utilize the UCDP Georeferenced Event Dataset (GED) Global version 18.1 \citep{UCDP_2017}. The dataset contains records of conflict fatalitest and the corrosponding coordinates from XXXX to XXXX. Conflict fatalities here defined as: 
+Most central to the endeavour at hand lies - of course - the data regarding intra-state conflict itself. This data is obtained through the Upssala Conflict Data Program (UCDP) \citep{Sundberg_2013, Croicu_Sundberg_2017}. Specifically I utilize the UCDP Georeferenced Event Dataset (GED) Global version 18.1 \citep{UCDP_2017}. The dataset contains records of conflict fatalities and the corresponding coordinates. As mentions I utilized data from 1990 through 2010\todo{Synes altså meningen var 2015??} but data from XXXX through XXXX is available in the database. Conflict fatalities are here defined as: 
 
 \begin{displayquote}
 
@@ -147,20 +150,21 @@ Most central to the endeavour at hand lies - of course - the data regarding intr
 
 Further definitions regarding armed force, organized actor ect. can be found in \cite[10-11]{Croicu_Sundberg_2017}.\par 
 
-The project at hand limits itself to intra-state conflict, thus I only included incidents NOT including two different nations as the organized actors\footnote{ Naturally the distinction between a intra-state conflict and a proxy war can be very hard to uphold in practise. Never-the-less, though proxy wars are effectively between two states, the phenomenon is arguable more similar to intra-state conflicts and civil wars then to all out open warfare between to nations. see XXXX for a in-depth discussion}. One could split conflict by many other lines and sub-lines. However, The distinction between international wars and internal conflict the only categorization I find prudent to utilizing a priori. Further sub-categorization - eg. separatist wars, sons-of-the-soils conflicts, coups ect - should be driven by empirical results derived from the data at hand. This is a subject I shall return to in [sectionXXXX].\par
+The project at hand limits itself to intra-state conflict, thus I only included incidents NOT including two different nations as the organized actors\footnote{ Naturally the distinction between a intra-state conflict and a proxy war can be very hard to uphold in practise. Never-the-less, though proxy wars are effectively between two states, the phenomenon is arguable more similar to intra-state conflicts and civil wars then to all out open warfare between to nations. see XXXX for a in-depth discussion}. One could split conflict by many other dimensions and sub-domensions. However, The distinction between international wars and internal conflict is the only categorization I find prudent to utilizing a priori. Further sub-categorization - eg. separatist wars, sons-of-the-soils conflicts, coups ect - should be driven by empirical results derived from the data at hand and thus these challenges are saved for future endeavours.\par 
+% men det kan du ikke rigtigt undersøge uden interactionsled...
+% This is a subject I shall return to in [sectionXXXX].\par
 
-[fig 1]
+As presented already this data source provides the prediction target; the presence of conflict deaths. However, as I will show many of the most important features I also derive from this data source; e.g. the distance from a specific cell to the nearest conflict and the number of previous conflicts in a given cell. The fact that conflicts in themslefs hold a lot of prediction power regarding future conflict might not surprise the reader, but I as will return to in the discussion I find the implications of this insight rather consequential in regards to future improvement of the framework.\par
 
-To minimize the number of missing values to be accounted for and imputed\footnote{For more on this see the appendix, \autoref{missing}} I incorporate from 1990 to 2015 for the prediction task at hand. Exclusively for the conflict data I will also utilize data from 2016 and 2017 for a final forecasting test.
-
+% To minimize the number of missing values to be accounted for and imputed\footnote{For more on this see the appendix, \autoref{missing}} I incorporate from 1990 to 2015 for the prediction task at hand. Exclusively for the conflict data I will also utilize data from 2016 and 2017 for a final forecasting test.
 
 \subsection{The contextual data}
 
-Given the geo-referenced nature of the UCDP data, the number of interesting data sources one could enhance it with is near endless. That being said the aggregation of various geo referenced and geo-spatial data accompanied with the appropriate grid construction and feature engineering can be a non-trivial and time consuming endeavour. It is certainly a interesting and most likely fruitfully undertaking, but one which must be saved for less preliminary work then the project at hand.\par
+Given the geo-referenced nature of the UCDP data, the number of interesting data sources one could enhance it with are viatually endless. That being said the aggregation of various geo referenced and geo-spatial data accompanied with the appropriate grid construction and feature engineering can be a time consuming endeavour. While it is certainly a interesting and most likely fruitfully undertaking, it is one which will be saved for less preliminary work then the project at hand.\par
 
-Conveniently the Peace Research Institute Oslo (PRIO) has created what they call a "unified spatial data structure" \cite[1]{Tollefsen_2012}. More specifically they have divided the world\footnote{Excluding Greenland and Antarctica} into grid cells of 0.5 x 0.5 decimal degrees. For each cell PRIO has gather a large selection of features, including economic, geographic and demographic features \citep{Tollefsen_2012}. Naturally the PRIO GRID also extent itself across time, and the most current data includes cell-years from 1946 to 2015 - with some divergence in the data coverage across the years \citep{Tollefsen_2016}. As metioned more complete data is available for more recent years; especially after 1989. Thus the period from 1990 through 2015 appears suitable. How I handle the the remaining missing values is described in the appendix, \autoref{missing}.\par
+Conveniently the Peace Research Institute Oslo (PRIO) has created what they call a "unified spatial data structure" \cite[1]{Tollefsen_2012}. More specifically they have divided the world\footnote{Excluding Greenland and Antarctica} into grid cells of 0.5 x 0.5 decimal degrees. For each cell PRIO has gather a large selection of features, including economic, geographic and demographic features \citep{Tollefsen_2012}. Naturally the PRIO GRID also extent itself across time, and the most current data includes cell-years from 1946 to 2015 - with some divergence in the data coverage across the years \citep{Tollefsen_2016}. As mentioned more complete data is available for more recent years; especially after 1989. Thus the period from 1990 through 2015 appears most suitable for this endeavour. Data after 1989 includes relativly few random missing observations wich a handle as described in the appendix, \autoref{missing}. Some variables a only account for in 5-years intervals. This is handled through cell specific linear interpolation as illustrated and described in the appendix, \autoref{interpolation}.\par
 
-The PRID GRID is constructed as geo-spatial data and primed for collaboration with the UCDP data, as such merging and handling these two data source is a trivial task. Before the more systemic/mechanical feature selection in \autoref{feature_selection} I choose handpick features from the PRIO GRID wich are moste often and constantly associated with internal conflict in the corresponding litterateur. Naturally a more data drive approach wold be preferable; unfortunately neither the computational power at my disposal or scope of this project allows such rigorously. The following section will present the handpicked features and also discuss some notable absentees\footnote{which will either be compensated for in the model specification or should be central elements in any future development of the model.}.\par
+The PRID GRID is constructed as geo-spatial data and primed for collaboration with the UCDP data, as such merging and handling these two data source is a trivial task. For now I refrain from the temptation to included all variables available through the PRIO-grid data base, and instead chose handpick features which are most often and constantly associated with internal conflict in the corresponding litterateur. This is done for two main reasons. Firstly, it is an effort to reduce potential noise and overfitting. Secondly, having less raw features to focus on allows for more time spend on feature engineering, manipulating the raw features from the database to more theoretical sound features corresponding to the actual mechanisms purposed in the literature. The following section will present the handpicked features and also discuss some notable absentees\footnote{which will either be compensated for in the model specification or should be central elements in any future development of the model.}.\par
 
 \section{Phenomenons to be Included as Features}
 
@@ -393,8 +397,8 @@ Notable missing: infant mort, political system and intra elite conflict... \cite
 \cite{Goldstone_2010} : Infant mortality deviant from global mean, factionalisation (political system), state led discrimination (nej, den e rjo lidt med igennem excluded), conflict ridden neighbourhood(er med på celle basis gennem nearest ish). p: 
 
 
-\section{Data Handling and exploration}
-
+%\section{Data Handling and exploration}
+% Nej! det skal ind under data sources of features.
 
 \section{Model Construction, Estimation and Results}
 
@@ -461,7 +465,9 @@ Notable missing: infant mort, political system and intra elite conflict... \cite
 
 All scripts can be found on : \hyperlink{https://github.com/Polichinel/Conflict_Prediction}{https://github.com/Polichinel/Conflict\_Prediction}
 
-\subsection{Handling of missing:}\label{missing}
+\subsection{Handling of random missing values}\label{missing}
+
+\subsection{Linear interpolation from 5-years intervals}\label{interpolation}
 
 \subsection{GCP and Night Light Emission}\label{GCP_corr}
 
