--- a/conflict.bib
+++ b/conflict.bib
@@ -540,3 +540,30 @@ eprint = {https://doi.org/10.1177/0022343309356491},
   year={1999},
   publisher={Cambridge University Press}
 }
+
+@article{Lipset_1959,
+  title={Some social requisites of democracy: Economic development and political legitimacy},
+  author={Lipset, Seymour Martin},
+  journal={American political science review},
+  volume={53},
+  number={1},
+  pages={69--105},
+  year={1959},
+  publisher={Cambridge University Press}
+}
+
+@inproceedings{Chen_2016,
+  title={Xgboost: A scalable tree boosting system},
+  author={Chen, Tianqi and Guestrin, Carlos},
+  booktitle={Proceedings of the 22nd acm sigkdd international conference on knowledge discovery and data mining},
+  pages={785-794},
+  year={2016},
+  organization={ACM}
+}
+
+@book{Friedman_2001,
+  title={The elements of statistical learning},
+  author={Friedman, Jerome and Hastie, Trevor and Tibshirani, Robert},
+  year={2001},
+  publisher={Springer series in statistics New York, NY, USA:}
+}
