--- a/conflict.bib
+++ b/conflict.bib
@@ -498,7 +498,7 @@ URL = {https://doi.org/10.1177/0022002715591215},
   publisher={Sage Publications Sage UK: London, England}
 }
 
-@article{Ward_Greenhill__Bakke_2010,
+@article{Ward_Greenhill_Bakke_2010,
 author = {Michael D Ward and Brian D Greenhill and Kristin M Bakke},
 title ={The perils of policy by p-value: Predicting civil conflicts},
 journal = {Journal of Peace Research},
@@ -566,4 +566,34 @@ eprint = {https://doi.org/10.1177/0022343309356491},
   author={Friedman, Jerome and Hastie, Trevor and Tibshirani, Robert},
   year={2001},
   publisher={Springer series in statistics New York, NY, USA:}
+}
+
+@article{He_2008,
+  title={Learning from imbalanced data},
+  author={He, Haibo and Garcia, Edwardo A},
+  journal={IEEE Transactions on Knowledge \& Data Engineering},
+  number={9},
+  pages={1263--1284},
+  year={2008},
+  publisher={Ieee}
+}
+
+@article{king_zeng_2001b, 
+title={Explaining Rare Events in International Relations}, 
+volume={55}, 
+DOI={10.1162/00208180152507597}, 
+number={3}, 
+journal={International Organization}, 
+publisher={Cambridge University Press}, 
+author={King, Gary and Zeng, Langche}, 
+year={2001}, 
+pages={693–715}}
+
+@article{perry_2013,
+  title={Machine learning and conflict prediction: a use case},
+  author={Perry, Chris},
+  journal={Stability: International Journal of Security \& Development},
+  volume={56}, 
+  number={2(3)}, 
+  year={2013}
 }
